--- a/proyecto.html
+++ b/proyecto.html
@@ -56,7 +56,7 @@
                       Asegúrate de que la imagen 'image_5203e5.jpg' esté en la misma carpeta que este archivo HTML.
                       El 'onerror' mostrará un módulo de reemplazo si no la encuentra.
                     -->
-                    <img src="modulo.jpg" alt="Módulo de tratamiento de agua UV-C rediseñado"
+                    <img src="modulo2.png" alt="Módulo de tratamiento de agua UV-C rediseñado"
                         class="rounded-lg shadow-lg object-cover w-full h-auto max-h-[500px] border-4 border-gray-200"
                         onerror="this.src='https://placehold.co/600x450/3b82f6/ffffff?text=M%C3%B3dulo+de+Agua+UV-C\n(Imagen+no+encontrada)'; this.classList.remove('border-4');">
                 </div>
@@ -303,5 +303,6 @@
     </footer>
 
 </body>
+
 
 </html>
