Add footer and improve styling in dashboard.html
Added footer with designer credit and adjusted styles.

--- a/dashboard.html
+++ b/dashboard.html
@@ -281,6 +281,25 @@
             gap: 30px;
             align-items: center;
         }
+
+        /* Footer: alineado a la derecha dentro del contenedor */
+        .site-footer {
+            text-align: right;
+            color: var(--color-texto);
+            font-size: 0.95em;
+            margin-top: 20px;
+            padding: 10px 0 0 0;
+        }
+
+        .site-footer p {
+            margin: 0;
+            color: rgba(230,241,255,0.9);
+        }
+
+        .site-footer strong {
+            color: var(--color-acento);
+            font-weight: 600;
+        }
     </style>
 </head>
 
@@ -361,6 +380,11 @@
             </section>
 
         </main>
+
+        <footer class="site-footer" role="contentinfo" aria-label="Pie de página">
+            <p>Diseñado por: <strong>Alfredo Contreras</strong></p>
+        </footer>
+
     </div>
 
     <script>
